--- a/app/views/juggling-trick.html
+++ b/app/views/juggling-trick.html
@@ -16,7 +16,7 @@
       <h1 class="govuk-heading-xl">What is your most impressive juggling trick?
       </h1>
 
-      <form class="form" action="/check-your-answers" method="post">
+      <form class="form" action="/new-page" method="post">
 
         <div class="govuk-form-group">
             <textarea class="govuk-textarea" id="juggling-trick" name="juggling-trick" rows="5" aria-describedby="juggling-trick-hint">  {{ data['juggling-trick']}}</textarea>
