--- a/app/views/confirmation-page.html
+++ b/app/views/confirmation-page.html
@@ -24,7 +24,7 @@
       </p>
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>We've sent your application to Hackney Electoral Register Office.</p>
+      <p>So you've decided to juggle anyway.</p>
       <p>They will contact you either to confirm your registration, or to ask for more information.</p>
       <p><a href="/birth">What did you think of this service?</a> (takes 30 seconds)</p>
 
